--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
         </svg>
     </section>
     <div id="products"></div>
-    <script src="/dist/build.js"></script>
+    <script src="dist/build.js"></script>
   </body>
 </html>
