--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     </div>
 
   </main>
-
+  <div id="app"></div>
+  
   <section id="about" class="section about">
     <h2 class="title about-title">О нас</h2>
-
     <div class="container">
       <p class="about-text">Компания Oftalmo group - один из лидеров рынка реализации интраокулярных линз и расходных
         материалов для офтальмологии. Только у нас вы найдёте самый широкий ассортимент брендов и моделей
@@ -75,14 +75,7 @@
       </svg>
     </div>
   </section>
-  <section id="products" class="section products">
-    asd
-    <svg viewBox="0 0 1122 88" class="wave" xmlns="http://www.w3.org/2000/svg">
-      <path
-        d="M560.75 44.0021C255 121.004 0 44.0021 0 44.0021V88H1121.5V44.0021C1121.5 44.0021 866.5 -33 560.75 44.0021Z"
-        fill="#fff" />
-    </svg>
-  </section>
+  
   <footer class="footer section">
     <h2 class="title">Контакты</h2>
     <div class="container footer-container">
