--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div></div>
       <div class="main-text">
         <h1 class="main-text__title">Ваш авторизованный дилер американских и европейских интраокулярных линз</h1>
-        <button class="main-text__button">Посмотреть каталог</button>
+        <button class="main-text__button button">Посмотреть каталог</button>
       </div>
       <img src="img/bg.png" alt="" class="main-img">
       <div class="main-brends">
@@ -71,7 +71,7 @@
     <div class="wave">
       <svg viewBox="0 0 1122 88" xmlns="http://www.w3.org/2000/svg">
         <path d="M0 43.5021C0 43.5021 255 120.504 560.75 43.5021C866.5 -33.5 1121.5 43.5021 1121.5 43.5021V0H0V43.5021Z"
-          fill="#6083ab" />
+          fill="#fff" />
       </svg>
     </div>
   </section>
