--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="header-logo"><img src="img/Logo.svg" alt="Офтальмо груп"></div>
       <div class="header-menu">
         <nav>
-          <ul>
+          <ul class="header-menu__list">
             <li><a href="#main">Главная</a></li>
             <li><a href="#about">О нас</a></li>
             <li><a href="#products">Каталог</a></li>
@@ -29,6 +29,25 @@
         <a href="tel:84997557650" class="header-contact__link">+7 499 755 76-50</a>
         <button class="header-contact__button"><i class="fas fa-phone"></i> <span>Сделать заказ</span></button>
       </div>
+      <div class="header-menu__button">
+        <span></span>
+      </div>
+      <div class="header_mobile">
+        <div class="header_mobile-menu">
+          <nav>
+            <ul class="header-menu__list">
+              <li><a href="#main">Главная</a></li>
+              <li><a href="#about">О нас</a></li>
+              <li><a href="#products">Каталог</a></li>
+              <li><a href="#footer">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header_mobile-contact">
+          <a href="tel:84997557650" class="header-contact__link">+7 499 755 76-50</a>
+          <button class="header-contact__button"><i class="fas fa-phone"></i> <span>Сделать заказ</span></button>
+        </div>
+      </div>
     </div>
   </header>
 
@@ -37,9 +56,9 @@
       <div></div>
       <div class="main-text">
         <h1 class="main-text__title">Ваш авторизованный дилер американских и европейских интраокулярных линз</h1>
+        <img src="img/bg.png" alt="" class="main-img">
         <button class="main-text__button button">Посмотреть каталог</button>
       </div>
-      <img src="img/bg.png" alt="" class="main-img">
       <div class="main-brends">
         <div class="main-brends__title">Наши бренды:</div>
         <ul class="main-brends__list">
